@@ -1,8 +1,13 @@
 2001-11-06  James Tanis  <jtt@winwood.sysdetect.com>
 
-	* lib/b_getbyfoo.c (bk_getprotobyfoo): Get protocol entry by
+	* test/test_getbyfoo.c (progrun): test program for getbyfoo
+	functions. 
+
+	* lib/b_getbyfoo.c (bk_getprotobyfoo): Get protoent by
 	anything (not yet mutex'ed).
 	(bk_protoent_destroy): Destroy a protoent created by above.
+	(bk_getprotobyfoo): Get a servent by anything.
+	(bk_protoent_destroy): Destroy the servent created above.
 
 	* lib/b_config.c (bk_config_init): All user to pass in preferences.
 	(bk_config_print): print config file.
